# nezumi-ai-desktop-core

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
cli/: Cargo.toml
cli/src/: db.rs  main.rs  tui.rs
native/litert_wrapper/: litert_wrapper.cpp  litert_wrapper.h
native/llama_wrapper/: CMakeLists.txt  llama_wrapper.cpp  llama_wrapper.h
src/: error.rs  ffi.rs  lib.rs
src/engines/: mod.rs
src/engines/litert/: mod.rs
src/engines/llama/: mod.rs
src/engines/selector/: mod.rs
src/session/: mod.rs
tests/: integration_test.rs
