[package]
name = "nezumi-ai-desktop-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "nezumi_ai_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
tokio = { version = "1", features = ["full"] }
async-stream = "0.3"
futures = "0.3"
thiserror = "1"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls"] }
serde = { version = "1", features = ["derive"] }
async-trait = "0.1"

[build-dependencies]
cc = "1"
