
[workspace]
members = [".", "cli"]
resolver = "2"
[package]
name = "nezumi-ai-desktop-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "nezumi_ai_core"
crate-type = ["cdylib", "rlib"]

[features]
default = ["session-sqlite"]
session-memory = []
session-sqlite = ["sqlx"]
litert = ["litertlm"]
cuda   = []
metal  = []
vulkan = []

[dependencies]
tokio        = { version = "1", features = ["full"] }
async-stream = "0.3"
futures      = "0.3"
thiserror    = "1"
async-trait  = "0.1"
serde        = { version = "1", features = ["derive"] }
sqlx         = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls"], optional = true }
litertlm     = { version = "0.2.1", optional = true }

[build-dependencies]
cc    = "1"
cmake = "0.1"
